# predictive-coding

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  train.py
docs/: FINDINGS.md  UNDERSTANDING.md
influid_pc/: build.py  data.py  report.py
influid_pc/diagnostics/: bp_alignment.py
influid_pc/fluid/: advection.py  connection.py  layer.py  nets.py  operators.py  projection.py
influid_pc/pc/: activations.py  connections.py  core.py  network.py
other/: README.md
other/docs/: FINDINGS.md  (+1 more)
results/: alignment.json  exp1-depth1-bp.json  exp1-depth1-pc-fixed.json  exp1-depth1-pc-strict.json  exp1-depth2-bp.json  exp1-depth2-pc-fixed.json  exp1-depth2-pc-strict.json  exp1-depth3-bp.json  exp1-depth3-pc-fixed.json  exp1-depth3-pc-strict.json  exp1-depth4-bp.json  exp1-depth4-pc-fixed.json  exp1-depth4-pc-strict.json  exp1-depth6-bp.json  exp1-depth6-pc-fixed.json  exp1-depth6-pc-strict.json  exp2-mnist-k10-bp.json  exp2-mnist-k10-pc.json  exp2-mnist-k2-bp.json  exp2-mnist-k2-pc.json  exp2-mnist-k3-bp.json  exp2-mnist-k3-pc.json  exp2-mnist-k5-bp.json  exp2-mnist-k5-pc.json  exp3-emnist-bp.json  exp3-emnist-pc.json  exp3-fashion-pc-4ep.json  exp3-fashion-pc-ctrl-4ep.json  exp3-fashion-pc-fluid.json  exp3-fashion-pc-nofluid-4ep.json  exp3-fashion-pc.json  exp4-base.json  exp4-hjb.json  exp4-kappa0.1.json  exp4-kappa0.3.json  exp4-obstacles.json  mnist-k10-pc-fixed.json  routing_task.json
scripts/: alignment_study.py  make_figures.py  routing_task.py  run_experiments.py
tests/: test_fluid_invariants.py  test_locality.py  test_pc_vs_backprop.py
(+20 files in other folders)
